fixing layout issues on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,8 +23,23 @@
   to { transform: rotate(360deg); }
 }
 
+#root {
+
+  box-sizing:border-box;
+}
+
+.page {
+  width:100%;
+  max-width:1100px;
+  margin:auto;
+  min-height:calc(100vh - 400px);
+}
 
 
+footer {
+  position: relative;
+  bottom:0;
+}
 /*  ClearFix  */
 /*  The ClearFix by Tony Aslett and Nicholas Gallagher */
 .group:before,
